--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
----
-redirect_from: "https://www.google.com/"
----
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://www.google.com/">
+<link rel="canonical" href="https://www.google.com/">
+
